--- a/css/style.css
+++ b/css/style.css
@@ -1,235 +1,215 @@
-@font-face {
-    font-family: "Raleway";
-    src: url('../recursos/Raleway-SemiBold.ttf');
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Raleway";
-    color: #323E48;
-}
-
-
-/* ------header----- */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Raleway";
+  color: #323E48; }
 
 .ancho-maximo {
-    max-width: 1900px;
-    margin: auto;
-}
+  max-width: 1900px;
+  margin: auto; }
 
 .header nav ul li:hover {
-    background-color: #f4b93a;
-    transition: all .3s;
-}
-
-.header nav ul li a:hover {
-    color: white;
-    transition: all .3s;
-}
+  background-color: #f4b93a;
+  transition: all .3s; }
 
 .header nav ul li a {
-    font-size: 20px;
-    color: #323E48;
-    text-decoration: none;
-    padding: 0 20px;
-}
+  font-size: 20px;
+  color: #323E48;
+  text-decoration: none;
+  padding: 0 20px; }
+  .header nav ul li a:hover {
+    color: white;
+    transition: all .3s; }
 
-.header div img {
-    width: 100%;
-}
+.main-index div img {
+  width: 100%; }
 
 .main-index ul {
-    background-color: #F5A800;
-    height: 100px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-}
-
-.main-index ul a {
+  background-color: #F5A800;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none; }
+  .main-index ul a {
     font-size: 20px;
     color: white;
     text-decoration: none;
-    padding: 50px;
-}
+    padding: 50px; }
 
-.main-index h2 {
+.main-index section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10px; }
+  .main-index section article img {
+    width: 305px;
+    padding: 5px; }
+  .main-index section article h2 {
     font-size: 20px;
     color: #323E48;
-}
-
-.grilla-index {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 10px;
-}
+    justify-content: center; }
 
-.grilla-index h2 {
-    display: flex;
-    justify-content: center;
-}
-
-.grilla-index img {
-    width: 305px;
-    padding: 5px;
-}
-
-.h1 {
-    background-color: #F5A800;
-    height: 70px;
+@media (max-width: 780px) {
+  .main-index ul {
+    flex-direction: column;
     width: 100%;
-    font-size: 20px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-}
+    height: 180px;
+    padding: 10px 0 0 0; }
+    .main-index ul li {
+      height: 50px; } }
 
-.main-imperdibles {
-    margin: 50px;
-}
+.main-conoce div img {
+  width: 100%; }
 
-.maps {
-    display: flex;
-    justify-content: center;
-}
-
-.fotos-quehacer article {
-    margin: 10px;
-    padding: 10px;
-}
-
-.fotos-quehacer {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-rows: repeat(2, 500px);
-    grid-template-areas:
-        "imagen-1 imagen-2"
-        "imagen-3 imagen-4";
-    max-width: 1800px;
-    margin: auto;
-    padding: 25px 0 25px 0;
-}
-
-.imagen-1 {
-    grid-area: imagen-1;
-    background-image: url('../recursos/comida-cordillera.jpg');
-    background-size: cover;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.imagen-2 {
-    grid-area: imagen-2;
-    background-image: url('../recursos/comida-estepa.jpg');
-    background-size: cover;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.imagen-3 {
-    grid-area: imagen-3;
-    background-image: url('../recursos/comida-valle.jpg');
-    background-size: cover;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.imagen-4 {
-    grid-area: imagen-4;
-    background-image: url('../recursos/comida-costa.jpg');
-    background-size: cover;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.fotos-quehacer h2 {
-    font-size: 40px;
-}
-
-.main-conoce {
-    margin:50px;
-}
+.main-conoce .h1 {
+  background-color: #F5A800;
+  height: 70px;
+  width: 100%;
+  font-size: 20px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none; }
 
 .main-conoce h2 {
-    font-size: 22px;
-    color: #F5A800;
-}
+  font-size: 22px;
+  color: #F5A800;
+  margin: 10px 50px; }
 
 .main-conoce p {
-    font-size: 20px;
-    color: #323E48;
-}
+  font-size: 20px;
+  color: #323E48;
+  margin: 10px 50px; }
+
+.main-imperdibles div img {
+  width: 100%; }
+
+.main-imperdibles .h1 {
+  background-color: #F5A800;
+  height: 70px;
+  width: 100%;
+  font-size: 20px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none; }
+
+.main-imperdibles h2 {
+  font-size: 22px;
+  color: #F5A800;
+  margin: 10px 50px; }
+
+.main-imperdibles p {
+  font-size: 20px;
+  color: #323E48;
+  margin: 10px 50px; }
+
+.main-imperdibles .maps {
+  display: flex;
+  justify-content: center;
+  margin: 10px 50px; }
+
+.maps {
+  display: flex;
+  justify-content: center; }
 
 .main-informacion {
-    margin: 50px;
-}
+  margin: 50px; }
 
 .main-informacion h1 {
-    font-size: 28px;
-    color: #323E48;
-}
+  font-size: 28px;
+  color: #323E48; }
 
 .main-informacion h2 {
-    font-size: 24px;
-    color: #323E48;
-}
+  font-size: 24px;
+  color: #323E48; }
 
 .main-informacion p {
-    font-size: 18px;
-    color: #3b454e;
-}
+  font-size: 18px;
+  color: #3b454e; }
 
-@media(max-width: 900px) {
-    .fotos-quehacer {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 400px);
-        grid-template-areas:
-            "imagen-1"
-            "imagen-2"
-            "imagen-3"
-            "imagen-4";
-    }
-}
+.h1 {
+  background-color: #F5A800;
+  height: 70px;
+  width: 100%;
+  font-size: 20px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none; }
 
-@media(max-width: 550px) {
-    .fotos-quehacer {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 200px);
-        grid-template-areas:
-            "imagen-1"
-            "imagen-2"
-            "imagen-3"
-            "imagen-4";
-    }
-}
+.fotos-quehacer article {
+  margin: 10px;
+  padding: 10px; }
 
-@media(max-width: 780px) {
-    .main-index ul {
-        flex-direction: column;
-        width: 100%;
-        height: 180px;
-        padding: 10px 0 0 0;
-    }
+.fotos-quehacer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(2, 500px);
+  grid-template-areas: "imagen-1 imagen-2" "imagen-3 imagen-4";
+  max-width: 1800px;
+  margin: auto;
+  padding: 25px 0 25px 0; }
 
-    .main-index ul li {
-        height: 50px;
-    }
-}
+.imagen-1 {
+  grid-area: imagen-1;
+  background-image: url("../recursos/comida-cordillera.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.imagen-2 {
+  grid-area: imagen-2;
+  background-image: url("../recursos/comida-estepa.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.imagen-3 {
+  grid-area: imagen-3;
+  background-image: url("../recursos/comida-valle.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.imagen-4 {
+  grid-area: imagen-4;
+  background-image: url("../recursos/comida-costa.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.fotos-quehacer h2 {
+  font-size: 40px; }
+
+@media (max-width: 900px) {
+  .fotos-quehacer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 400px);
+    grid-template-areas: "imagen-1" "imagen-2" "imagen-3" "imagen-4"; } }
+
+@media (max-width: 550px) {
+  .fotos-quehacer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 200px);
+    grid-template-areas: "imagen-1" "imagen-2" "imagen-3" "imagen-4"; } }
