--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 // utilidades
 @import "./recursos/variables";
 @import "./recursos/reseteo";
+@import "./recursos/extend";
 
 // secciones
 @import "./secciones/header";
@@ -10,4 +11,5 @@
 @import"./secciones/main-conoce";
 @import"./secciones/main-imperdibles";
 @import"./secciones/main-informacion";
-@import"./secciones/main-que-hacer";
+@import"./secciones/main-quehacer";
+@import"./secciones/footer";
