--- a/scss/secciones/_main-index.scss
+++ b/scss/secciones/_main-index.scss
@@ -15,7 +15,7 @@
         list-style: none;
 
         a {
-            font-size: 20px;
+            font-size: $h1;
             color: $blanco;
             text-decoration: none;
             padding: 50px;
@@ -28,21 +28,24 @@
         justify-content: center;
         padding: 10px;
 
-        article {
-            img {
-                width: 305px;
-                padding: 5px;
-            }
+        img {
+            width: 305px;
+            padding: 5px;
+        }
+
+        a {
+            display: flex;
+            justify-content: center;
+            text-decoration: none;
 
             h2 {
-                font-size: 20px;
+                font-size: $h2;
                 color: $gris-azulado;
-                display: flex;
-                justify-content: center;
             }
         }
     }
 }
+
 
 
 
@@ -57,6 +60,10 @@
 
             li {
                 height: 50px;
+
+                a {
+                    font-size: $h2;
+                }
             }
         }
     }
