--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,16 @@
   padding: 0 5px; }
 
 .fa-twitter {
-  color: #4a5e6d;
-  padding: 0 5px; }
+  color: #323E48;
+  padding: 0 10px; }
 
 .fa-facebook {
-  color: #4a5e6d;
-  padding: 0 5px; }
+  color: #323E48;
+  padding: 0 10px; }
 
 .fa-instagram {
-  color: #4a5e6d;
-  padding: 0 5px; }
+  color: #323E48;
+  padding: 0 10px; }
 
 * {
   margin: 0;
@@ -59,38 +59,38 @@
     color: white;
     transition: all .3s; }
 
-.main-index div img {
-  width: 100%; }
-
-.main-index ul {
-  background-color: #F5A800;
-  height: 100px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none; }
-  .main-index ul a {
-    font-size: 30px;
-    color: white;
-    text-decoration: none;
-    padding: 50px; }
-
-.main-index section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 10px; }
-  .main-index section img {
-    width: 305px;
-    padding: 5px; }
-  .main-index section a {
+.main-index {
+  min-height: 80vh; }
+  .main-index div img {
+    width: 100%; }
+  .main-index ul {
+    background-color: #F5A800;
+    height: 80px;
+    width: 100%;
     display: flex;
     justify-content: center;
-    text-decoration: none; }
-    .main-index section a h2 {
-      font-size: 24px;
-      color: #323E48; }
+    align-items: center;
+    list-style: none; }
+    .main-index ul a {
+      font-size: 30px;
+      color: white;
+      text-decoration: none;
+      padding: 50px; }
+  .main-index section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px; }
+    .main-index section img {
+      width: 305px;
+      padding: 10px; }
+    .main-index section a {
+      display: flex;
+      justify-content: center;
+      text-decoration: none; }
+      .main-index section a h2 {
+        font-size: 24px;
+        color: #323E48; }
 
 @media (max-width: 780px) {
   .main-index ul {
@@ -235,5 +235,24 @@
     grid-template-rows: repeat(4, 200px);
     grid-template-areas: "imagen-1" "imagen-2" "imagen-3" "imagen-4"; } }
 
-.footer ul li {
-  display: flex; }
+.footer {
+  background-color: #b9c3cb;
+  height: 80px;
+  width: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  flex-wrap: wrap; }
+  .footer a {
+    font-size: 21px;
+    text-decoration: none;
+    color: #323E48; }
+
+@media (max-width: 600px) {
+  .footer li {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    width: 100%;
+    padding: auto; } }
