--- a/scss/recursos/_variables.scss
+++ b/scss/recursos/_variables.scss
@@ -1,5 +1,6 @@
 // paleta de colores
 $naranja-suave: #f4b93a;
+$naranja-massuave: #f6e9ce;
 $naranja: #F5A800;
 $blanco: white;
 $gris-azulado: #323E48;
@@ -29,16 +30,16 @@ $parrafo: 20px;
 }
 
 .fa-twitter {
-    color: #4a5e6d;
-    padding: 0 5px;
+    color: $gris-azulado;
+    padding: 0 10px;
 }
 
 .fa-facebook {
-    color: #4a5e6d;
-    padding: 0 5px;
+    color: $gris-azulado;
+    padding: 0 10px;
 }
 
 .fa-instagram{
-    color: #4a5e6d;
-    padding: 0 5px;
+    color: $gris-azulado;
+    padding: 0 10px;
 }
