--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -1,7 +1,28 @@
 .footer {
-    ul {
-        li {
+    background-color: #b9c3cb;
+    height: 80px;
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+
+    a {
+        font-size: $h3;
+        text-decoration: none;
+        color: $gris-azulado;
+    }
+}
+
+@media(max-width: 600px) {
+    .footer {
+        li{
             display: flex;
+            flex-direction: column;
+            align-content: center;
+            width: 100%;
+            padding: auto;
         }
     }
 }
