--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+.fa-circle-info {
+  color: white;
+  font-size: 50px;
+  text-decoration: none;
+  padding: 0 20px; }
+
 .fa-whatsapp {
   color: white;
-  font-size: 30px;
+  font-size: 40px;
   text-decoration: none;
-  padding: 0 5px; }
+  padding: 0 10px 0 10px; }
 
 .fa-cloud-showers-heavy {
-  color: #4a5e6d;
+  color: #323E48;
   padding: 0 5px; }
-
-.fa-twitter {
-  color: #323E48;
-  padding: 0 10px; }
-
-.fa-facebook {
-  color: #323E48;
-  padding: 0 10px; }
-
-.fa-instagram {
-  color: #323E48;
-  padding: 0 10px; }
 
 * {
   margin: 0;
@@ -63,163 +57,167 @@
   min-height: 80vh; }
   .main-index div img {
     width: 100%; }
-  .main-index ul {
+  .main-index .barra {
     background-color: #F5A800;
-    height: 80px;
     width: 100%;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
-    list-style: none; }
-    .main-index ul a {
+    justify-content: center;
+    padding: 25px;
+    list-style: none;
+    text-align: left; }
+    .main-index .barra a {
       font-size: 30px;
       color: white;
       text-decoration: none;
-      padding: 50px; }
+      padding: 0 10px; }
+    .main-index .barra p {
+      font-size: 20px;
+      color: white;
+      padding: 0 10px; }
   .main-index section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding: 10px; }
     .main-index section img {
-      width: 305px;
-      padding: 10px; }
+      width: 310px;
+      padding: 10px 10px 0 10px; }
     .main-index section a {
       display: flex;
       justify-content: center;
       text-decoration: none; }
       .main-index section a h2 {
+        background-color: #1ecad3;
+        width: 290px;
+        height: 50px;
         font-size: 24px;
-        color: #323E48; }
+        text-align: center;
+        padding: 10px;
+        color: white; }
 
-@media (max-width: 780px) {
-  .main-index ul {
-    flex-direction: column;
+@media (max-width: 775px) {
+  .main-index .barra {
+    text-align: center; } }
+
+.main-conoce {
+  min-height: 80vh; }
+  .main-conoce div img {
+    width: 100%; }
+  .main-conoce h1 {
+    background-color: #F5A800;
+    height: 80px;
     width: 100%;
-    height: 180px;
-    padding: 10px 0 0 0; }
-    .main-index ul li {
-      height: 50px; }
-      .main-index ul li a {
-        font-size: 24px; } }
-
-.main-conoce div img {
-  width: 100%; }
-
-.main-conoce h1 {
-  background-color: #F5A800;
-  height: 80px;
-  width: 100%;
-  font-size: 30px;
-  color: white;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none; }
-
-.main-imperdibles div img {
-  width: 100%; }
-
-.main-imperdibles h1 {
-  background-color: #F5A800;
-  height: 80px;
-  width: 100%;
-  font-size: 30px;
-  color: white;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none; }
-
-.main-imperdibles .maps {
-  display: flex;
-  justify-content: center;
-  margin: 40px; }
-
-.main-informacion .maps {
-  display: flex;
-  justify-content: center;
-  margin: 40px; }
-
-.main-informacion h1 {
-  font-size: 30px;
-  color: #323E48;
-  margin: 10px 50px; }
-
-.main-informacion h2 {
-  font-size: 24px;
-  color: #323E48;
-  margin: 10px 50px; }
-
-.main-informacion p {
-  font-size: 20px;
-  color: #323E48;
-  margin: 10px 50px; }
-
-.main-quehacer div img {
-  width: 100%; }
-
-.main-quehacer h1 {
-  background-color: #F5A800;
-  height: 80px;
-  width: 100%;
-  font-size: 30px;
-  color: white;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none; }
-
-.main-quehacer .fotos {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-rows: repeat(2, 500px);
-  grid-template-areas: "imagen-1 imagen-2" "imagen-3 imagen-4";
-  max-width: 1800px;
-  margin: auto;
-  padding: 25px 0 25px 0; }
-  .main-quehacer .fotos article {
-    margin: 10px;
-    padding: 10px; }
-  .main-quehacer .fotos .imagen-1 {
-    grid-area: imagen-1;
-    background-image: url("../recursos/comida-cordillera.jpg");
-    background-size: cover;
+    font-size: 30px;
     color: white;
+    text-align: center;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: center; }
-  .main-quehacer .fotos .imagen-2 {
-    grid-area: imagen-2;
-    background-image: url("../recursos/comida-estepa.jpg");
-    background-size: cover;
+    list-style: none; }
+
+.main-imperdibles {
+  min-height: 80vh; }
+  .main-imperdibles div img {
+    width: 100%; }
+  .main-imperdibles h1 {
+    background-color: #F5A800;
+    height: 80px;
+    width: 100%;
+    font-size: 30px;
     color: white;
+    text-align: center;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: center; }
-  .main-quehacer .fotos .imagen-3 {
-    grid-area: imagen-3;
-    background-image: url("../recursos/comida-valle.jpg");
-    background-size: cover;
+    list-style: none; }
+  .main-imperdibles .maps {
+    display: flex;
+    justify-content: center;
+    margin: 40px; }
+
+.main-informacion {
+  min-height: 80vh; }
+  .main-informacion .maps {
+    display: flex;
+    justify-content: center;
+    margin: 40px; }
+  .main-informacion h1 {
+    font-size: 30px;
+    color: #323E48;
+    margin: 10px 50px; }
+  .main-informacion h2 {
+    font-size: 24px;
+    color: #323E48;
+    margin: 10px 50px; }
+  .main-informacion p {
+    font-size: 20px;
+    color: #323E48;
+    margin: 10px 50px; }
+
+.main-quehacer {
+  min-height: 80vh; }
+  .main-quehacer div img {
+    width: 100%; }
+  .main-quehacer h1 {
+    background-color: #F5A800;
+    height: 80px;
+    width: 100%;
+    font-size: 30px;
     color: white;
+    text-align: center;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: center; }
-  .main-quehacer .fotos .imagen-4 {
-    grid-area: imagen-4;
-    background-image: url("../recursos/comida-costa.jpg");
-    background-size: cover;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .main-quehacer .fotos h2 {
-    font-size: 40px; }
+    list-style: none; }
+  .main-quehacer .fotos {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(2, 500px);
+    grid-template-areas: "imagen-1 imagen-2" "imagen-3 imagen-4";
+    max-width: 1800px;
+    margin: auto;
+    padding: 25px 0 25px 0; }
+    .main-quehacer .fotos article {
+      margin: 10px;
+      padding: 10px; }
+    .main-quehacer .fotos .imagen-1 {
+      grid-area: imagen-1;
+      background-image: url("../recursos/comida-cordillera.jpg");
+      background-size: cover;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .main-quehacer .fotos .imagen-2 {
+      grid-area: imagen-2;
+      background-image: url("../recursos/comida-estepa.jpg");
+      background-size: cover;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .main-quehacer .fotos .imagen-3 {
+      grid-area: imagen-3;
+      background-image: url("../recursos/comida-valle.jpg");
+      background-size: cover;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .main-quehacer .fotos .imagen-4 {
+      grid-area: imagen-4;
+      background-image: url("../recursos/comida-costa.jpg");
+      background-size: cover;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .main-quehacer .fotos h2 {
+      font-size: 40px; }
 
 @media (max-width: 900px) {
   .main-quehacer .fotos {
@@ -236,23 +234,170 @@
     grid-template-areas: "imagen-1" "imagen-2" "imagen-3" "imagen-4"; } }
 
 .footer {
-  background-color: #b9c3cb;
-  height: 80px;
+  margin: 20px 0 0 0;
   width: 100%;
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
-  flex-wrap: wrap; }
-  .footer a {
-    font-size: 21px;
-    text-decoration: none;
-    color: #323E48; }
-
-@media (max-width: 600px) {
-  .footer li {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+  background-color: #f6e9ce; }
+  .footer .grupo {
     width: 100%;
-    padding: auto; } }
+    max-width: 1800px;
+    max-height: 380px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6 box-7" "box-1 box-2 box-3 box-4 box-5 box-6 box-8";
+    padding: 45px 0; }
+    .footer .grupo .box-1 {
+      grid-area: box-1; }
+      .footer .grupo .box-1 figure {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .footer .grupo .box-1 figure img {
+          width: 120px; }
+    .footer .grupo .box-2 {
+      grid-area: box-2;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      padding: 0 10px; }
+      .footer .grupo .box-2 h2 {
+        color: #323E48;
+        margin-bottom: 10px;
+        font-size: 21px; }
+      .footer .grupo .box-2 a {
+        color: #323E48;
+        font-size: 16px;
+        text-decoration: none; }
+    .footer .grupo .box-3 {
+      grid-area: box-3;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      padding: 0 10px; }
+      .footer .grupo .box-3 a {
+        color: #323E48;
+        font-size: 16px;
+        text-decoration: none; }
+    .footer .grupo .box-4 {
+      grid-area: box-4;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      padding: 0 10px; }
+      .footer .grupo .box-4 a {
+        color: #323E48;
+        font-size: 16px;
+        text-decoration: none; }
+    .footer .grupo .box-5 {
+      grid-area: box-5;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      padding: 0 10px; }
+      .footer .grupo .box-5 a {
+        color: #323E48;
+        font-size: 16px;
+        text-decoration: none; }
+    .footer .grupo .box-6 {
+      grid-area: box-6;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      padding: 0 10px; }
+      .footer .grupo .box-6 a {
+        color: #323E48;
+        font-size: 16px;
+        text-decoration: none; }
+    .footer .grupo .box-7 {
+      grid-area: box-7;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      margin: 0 30px 0 10px; }
+      .footer .grupo .box-7 h3 {
+        color: #323E48;
+        margin-bottom: 10px;
+        font-size: 21px; }
+      .footer .grupo .box-7 p {
+        color: #323E48;
+        font-size: 16px;
+        text-decoration: none; }
+    .footer .grupo .box-8 {
+      grid-area: box-8;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .footer .grupo .box-8 .red-social a {
+        background-color: #f6e9ce;
+        padding: 10px;
+        font-size: 25px; }
+
+@media (max-width: 1265px) {
+  .footer {
+    background-color: #f6e9ce;
+    height: 500px; }
+    .footer .grupo {
+      width: 100%;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6" "box-1 box-7 box-7 box-7 box-7 box-8";
+      padding: 45px 0; }
+      .footer .grupo .box-7 {
+        padding: 15px;
+        align-content: center;
+        margin: 0; } }
+
+@media (max-width: 1240px) {
+  .footer {
+    background-color: #f6e9ce;
+    height: 510px; }
+    .footer .grupo {
+      width: 100%;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas: "box-1 box-2 box-3 box-4 box-5 box-6" "box-1 box-7 box-7 box-7 box-7 box-8";
+      padding: 45px 0; } }
+
+@media (max-width: 940px) {
+  .footer {
+    background-color: #f6e9ce;
+    height: 650px;
+    padding: 0 10px 0 20px; }
+    .footer .grupo {
+      width: 100%;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: 3fr 1fr;
+      grid-template-areas: "box-2 box-3 box-4 box-5 box-6" "box-1 box-7 box-7 box-7 box-8";
+      padding: 45px 0; }
+      .footer .grupo .box-7 {
+        align-content: center;
+        padding: 20px; } }
+
+@media (max-width: 621px) {
+  .footer {
+    background-color: #f6e9ce;
+    height: 1800px; }
+    .footer .grupo {
+      width: 100%;
+      grid-template-columns: 1fr;
+      grid-template-rows: 8fr;
+      grid-template-areas: "box-2" "box-3" "box-4" "box-5" "box-6" "box-1" "box-7" "box-8";
+      padding: 45px 0; }
+      .footer .grupo .box-1 {
+        padding: 20px; }
+      .footer .grupo .box-2 {
+        align-items: center; }
+      .footer .grupo .box-3 {
+        align-items: center; }
+      .footer .grupo .box-4 {
+        align-items: center; }
+      .footer .grupo .box-5 {
+        align-items: center; }
+      .footer .grupo .box-6 {
+        align-items: center; }
+      .footer .grupo .box-7 {
+        align-content: center;
+        padding: 20px; } }
