--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -1,28 +1,263 @@
 .footer {
-    background-color: #b9c3cb;
-    height: 80px;
+    margin: 20px 0 0 0;
     width: 100%;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    flex-wrap: wrap;
+    background-color: $naranja-massuave;
 
-    a {
-        font-size: $h3;
-        text-decoration: none;
-        color: $gris-azulado;
+    .grupo {
+        width: 100%;
+        max-width: 1800px;
+        max-height: 380px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas:
+            "box-1 box-2 box-3 box-4 box-5 box-6 box-7"
+            "box-1 box-2 box-3 box-4 box-5 box-6 box-8";
+        padding: 45px 0;
+
+        .box-1 {
+            grid-area: box-1;
+
+            figure {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    width: 120px;
+                }
+            }
+        }
+
+        .box-2 {
+            grid-area: box-2;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            padding: 0 10px;
+
+            h2 {
+                color: $gris-azulado;
+                margin-bottom: 10px;
+                font-size: $h3;
+            }
+
+            a {
+                color: $gris-azulado;
+                font-size: $texto-footer;
+                text-decoration: none;
+            }
+        }
+
+        .box-3 {
+            grid-area: box-3;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            padding: 0 10px;
+
+            a {
+                color: $gris-azulado;
+                font-size: $texto-footer;
+                text-decoration: none;
+            }
+        }
+
+        .box-4 {
+            grid-area: box-4;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            padding: 0 10px;
+
+            a {
+                color: $gris-azulado;
+                font-size: $texto-footer;
+                text-decoration: none;
+            }
+        }
+
+        .box-5 {
+            grid-area: box-5;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            padding: 0 10px;
+
+            a {
+                color: $gris-azulado;
+                font-size: $texto-footer;
+                text-decoration: none;
+            }
+        }
+
+        .box-6 {
+            grid-area: box-6;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            padding: 0 10px;
+
+            a {
+                color: $gris-azulado;
+                font-size: $texto-footer;
+                text-decoration: none;
+            }
+        }
+
+        .box-7 {
+            grid-area: box-7;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            margin: 0 30px 0 10px;
+
+            h3 {
+                color: $gris-azulado;
+                margin-bottom: 10px;
+                font-size: $h3;
+            }
+
+            p {
+                color: $gris-azulado;
+                font-size: $texto-footer;
+                text-decoration: none;
+            }
+
+        }
+
+        .box-8 {
+            grid-area: box-8;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .red-social {
+                a {
+                    background-color: $naranja-massuave;
+                    padding: 10px;
+                    font-size: 25px;
+                }
+            }
+        }
+
     }
 }
 
-@media(max-width: 600px) {
+@media(max-width: 1265px) {
     .footer {
-        li{
-            display: flex;
-            flex-direction: column;
-            align-content: center;
+        background-color: $naranja-massuave;
+        height: 500px;
+
+        .grupo {
             width: 100%;
-            padding: auto;
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: 1fr 1fr;
+            grid-template-areas:
+                "box-1 box-2 box-3 box-4 box-5 box-6"
+                "box-1 box-7 box-7 box-7 box-7 box-8";
+            padding: 45px 0;
+
+            .box-7 {
+                padding: 15px;
+                align-content: center;
+                margin: 0;
+            }
+        }
+    }
+}
+
+@media(max-width: 1240px) {
+    .footer {
+        background-color: $naranja-massuave;
+        height: 510px;
+
+        .grupo {
+            width: 100%;
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: 1fr 1fr;
+            grid-template-areas:
+                "box-1 box-2 box-3 box-4 box-5 box-6"
+                "box-1 box-7 box-7 box-7 box-7 box-8";
+            padding: 45px 0;
+        }
+    }
+}
+
+@media(max-width: 940px) {
+    .footer {
+        background-color: $naranja-massuave;
+        height: 650px;
+        padding: 0 10px 0 20px;
+
+        .grupo {
+            width: 100%;
+            grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: 3fr 1fr;
+            grid-template-areas:
+                "box-2 box-3 box-4 box-5 box-6"
+                "box-1 box-7 box-7 box-7 box-8";
+            padding: 45px 0;
+
+            .box-7 {
+                align-content: center;
+                padding: 20px;
+            }
+        }
+    }
+}
+
+@media(max-width: 621px) {
+    .footer {
+        background-color: $naranja-massuave;
+        height: 1800px;
+
+        .grupo {
+            width: 100%;
+            grid-template-columns: 1fr;
+            grid-template-rows: 8fr;
+            grid-template-areas:
+                "box-2"
+                "box-3"
+                "box-4"
+                "box-5"
+                "box-6"
+                "box-1"
+                "box-7"
+                "box-8";
+            padding: 45px 0;
+
+            .box-1 {
+                padding: 20px;
+            }
+
+            .box-2 {
+                align-items: center
+            }
+
+            .box-3 {
+                align-items: center
+            }
+
+            .box-4 {
+                align-items: center
+            }
+
+            .box-5 {
+                align-items: center
+            }
+
+            .box-6 {
+                align-items: center
+            }
+
+            .box-7 {
+                align-content: center;
+                padding: 20px;
+            }
         }
     }
 }
