--- a/scss/secciones/_main-index.scss
+++ b/scss/secciones/_main-index.scss
@@ -7,22 +7,32 @@
         }
     }
 
-    ul {
+    .barra {
         background-color: $naranja;
-        height: 80px;
         width: 100%;
         display: flex;
-        justify-content: center;
+        flex-wrap: wrap;
         align-items: center;
+        justify-content: center;
+        padding: 25px;
         list-style: none;
+        text-align: left;
 
         a {
             font-size: $h1;
             color: $blanco;
             text-decoration: none;
-            padding: 50px;
+            padding: 0 10px;
         }
+
+        p {
+            font-size: $parrafo;
+            color: $blanco;
+            padding: 0 10px;
+        }
+
     }
+
 
     section {
         display: flex;
@@ -31,8 +41,8 @@
         padding: 10px;
 
         img {
-            width: 305px;
-            padding: 10px;
+            width: 310px;
+            padding: 10px 10px 0 10px;
         }
 
         a {
@@ -41,32 +51,22 @@
             text-decoration: none;
 
             h2 {
+                background-color: #1ecad3;
+                width: 290px;
+                height: 50px;
                 font-size: $h2;
-                color: $gris-azulado;
+                text-align: center;
+                padding: 10px;
+                color: $blanco;
             }
         }
     }
 }
 
-
-
-
-
-@media(max-width: 780px) {
+@media(max-width: 775px) {
     .main-index {
-        ul {
-            flex-direction: column;
-            width: 100%;
-            height: 180px;
-            padding: 10px 0 0 0;
-
-            li {
-                height: 50px;
-
-                a {
-                    font-size: $h2;
-                }
-            }
+        .barra {
+            text-align: center;
         }
     }
 }
